public/themes/custom/kaupunkitieto/src/scss/components/block/_recent-articles.scss
#block-views-block-article-recent {
  margin-top: $spacing;
  padding: 0 $spacing;

  @include breakpoint($breakpoint-m) {
    padding: 0 $spacing * 2;
  }

  > h2,
  > div {
    margin: 0 auto;
    max-width: 1264px;
  }

  h2 {
    @include font-size(36px, 64px);
    font-weight: 400;
    margin-bottom: $spacing;

    @include breakpoint($breakpoint-l) {
      @include font-size(48px, 64px);
    }

  }
}

.views--article.views--recent {

  @include breakpoint($breakpoint-s) {
    display: flex;
    flex-wrap: wrap;

    header {
      width: 100%;
    }

    .views-row {
      @include breakpoint($breakpoint-m ($breakpoint-l - 1px)) {
        width: calc(100% / 2 - #{$spacing-quarter} - #{$spacing-half});

        &:not(:nth-child(2n+2)) {
          margin-right: $spacing-and-half;
        }
      }

      @include breakpoint($breakpoint-l) {
        width: calc(100% / 3 - #{$spacing});

        &:not(:nth-child(3n+3)) {
          margin-right: $spacing-and-half;
        }
      }
    }
  }


  .views-field {
    margin-bottom: 8px;
  }

  .views-field-title {
    a {
      text-decoration: none;
    }
  }

  .views-field-field-liftup-image {
    img {
      display: block;
      max-width: 100%;
      height: auto !important;
    }
  }

  .views-field-created {
    display: inline-block;
    margin-right: 4px;
  }

  .views-field-field-author-1 {
    display: inline-block;
  }

  .views-field-field-keywords{
    ul {
      margin: 0;
      padding: 0;
      list-style: none;
    }

    li {
      display: inline-block;
      background: $color-black;
      border-radius: $spacing;
      padding: 0 $spacing;
      margin-right: $spacing-half;
      margin-bottom: $spacing-half;
      @include font-size(14px, 30px);

      a {
        color: $color-white;
        text-decoration: none;
      }
    }
  }
}

